Fix spacing of discography in search results
When there were fewer (but more than zero) artist results than other
results, 0.1em of the discography could be cut off. This fixes that.

--- a/app/style.css
+++ b/app/style.css
@@ -374,7 +374,7 @@ img.thumb
 #search-artists .discography
 {
   white-space: nowrap;
-  overflow: visible;
+  overflow: hidden;
 }
 
 #search-artists .discography img
